magento/magento2-page-builder#557: User access Row action panel with 2+ level nesting - Fixed label overflow, static errors

--- a/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/_preview.less
+++ b/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/_preview.less
@@ -198,14 +198,14 @@
 
     > .pagebuilder-content-type.type-container.pagebuilder-row {
         box-shadow: none;
+    }
 
-        > .pagebuilder-display-label {
-            background-color: @color-gray98;
-            color: @color-pagebuilder-silver;
-            line-height: 13px;
-            padding: 1px 0 0;
-            transform: translate(-50%, -15px);
-        }
+    > .pagebuilder-display-label {
+        background-color: transparent;
+        color: @color-pagebuilder-silver;
+        line-height: 13px;
+        padding: 1px 0 0;
+        transform: translate(-50%, -15px);
     }
 }
 
